<resources>
    //Pantalla principal
    <string name="app_name">Maquetado</string>
    <string name="btnGrupoRiesgo">Grupo de riesgo</string>
    <string name="btnInfoPaciente">Información para pacientes</string>
    <string name="btnCargaDatos">Carga de datos</string>

    //Pantalla 2
    <string name="txtInfoGeneral">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus, architecto atque commodi cupiditate dolores earum eos facere iure labore neque non porro quisquam rerum tempora vel veniam voluptatem! Accusantium aliquid deleniti dolor earum, facere, facilis harum hic impedit incidunt ipsam ipsum laboriosam magnam necessitatibus nesciunt nihil, nisi nobis nostrum porro quaerat recusandae repellat similique unde velit vitae voluptatum. Accusamus debitis deleniti dolor eaque expedita explicabo ipsam reprehenderit sed. Architecto atque autem corporis debitis, dolore explicabo in, maxime molestiae nam pariatur perspiciatis possimus qui vel. Accusamus dolore ducimus fugiat, in ipsum laboriosam minima quaerat quos repellendus velit. At consequuntur cumque doloremque eligendi, eos fugit laborum minus, molestiae necessitatibus perspiciatis praesentium quibusdam quidem, repudiandae sequi sunt suscipit voluptatum. A, aliquid consequuntur corporis cumque eum in ipsa itaque necessitatibus nostrum sit. Aspernatur, consectetur, culpa dolore eaque eos fugit magnam modi mollitia nobis possimus quae quisquam, sint ut! Adipisci aperiam, atque aut consequatur consequuntur dolore doloremque eveniet ex ipsum labore laudantium, maiores nesciunt non possimus praesentium quod rerum tenetur, totam ut voluptas! Alias aliquid amet aspernatur beatae blanditiis, dicta eveniet exercitationem, expedita fuga harum ipsa iste laudantium magni nulla officia optio perspiciatis porro quasi quibusdam quos repudiandae saepe soluta? Consequuntur ducimus enim in laboriosam nemo nihil quidem ratione recusandae suscipit vitae! At aut ducimus facilis, illum ipsam recusandae sed tempora tempore. Accusantium aut cupiditate ex exercitationem fuga fugiat incidunt, inventore iure magni necessitatibus nesciunt non odit porro quod repellendus reprehenderit similique sint, soluta sunt voluptate? Accusamus cumque distinctio dolorem dolores eveniet exercitationem harum id iusto, labore non possimus provident quasi, sunt tempora voluptate? Accusamus accusantium, alias asperiores blanditiis consectetur consequatur eaque eius eos expedita facere facilis hic, laudantium magnam natus, praesentium quam soluta ullam voluptates! Ad animi aperiam autem deleniti eaque enim eum hic modi nisi odio quaerat quis quos, reiciendis similique, suscipit tempore vel. Alias architecto dignissimos est, itaque numquam pariatur provident repudiandae veniam. Aliquam aspernatur corporis deleniti deserunt dolor dolorem eligendi id in inventore ipsum iusto minima nam necessitatibus possimus provident quam quas reprehenderit sapiente, tempora ullam? Accusamus aliquid architecto asperiores autem blanditiis consectetur corporis cumque deserunt ducimus ea enim eos eveniet facere fuga hic illum in incidunt ipsam laborum libero magni modi molestias natus necessitatibus nemo nihil nisi officia placeat praesentium quaerat quidem repellat rerum saepe totam unde veritatis, voluptas! Ab beatae culpa eligendi fugiat illo, illum laboriosam laudantium mollitia nobis nulla omnis quae quaerat quas quibusdam, tempore veritatis vero! Aliquam aperiam beatae commodi cupiditate dignissimos doloremque ducimus eaque esse expedita explicabo fugiat id in ipsum itaque iure labore libero maiores molestiae mollitia necessitatibus nulla pariatur perspiciatis possimus quam quis quo recusandae reprehenderit, repudiandae rerum sequi temporibus tenetur ullam unde velit veritatis voluptates voluptatibus. Aliquam amet architecto aspernatur at beatae cupiditate debitis deserunt ex facere fugit illum iure officiis quaerat sint totam vitae, voluptatem. Asperiores cumque doloribus error, eum exercitationem facilis minima molestiae nesciunt nobis perspiciatis quae quaerat quidem quos tenetur ullam. Accusantium ad architecto corporis distinctio doloremque dolorum est eveniet excepturi facere fuga id incidunt ipsum labore laborum libero, minima minus mollitia nam natus necessitatibus nemo non nulla officiis omnis perspiciatis quaerat reiciendis rem sint soluta sunt, tempora tempore ullam ut velit voluptate voluptatibus voluptatum. Ab, architecto doloribus in magni officiis praesentium reiciendis similique sint tempora temporibus, totam veniam veritatis. Architecto cumque deleniti doloribus, dolorum ducimus ex expedita ipsam, iste nam, nihil odit officiis placeat quasi quidem quo quod repudiandae rerum similique sint ullam. Aliquid amet aperiam atque consectetur debitis dicta eligendi et ex id illum, inventore iste libero magnam officiis porro sint temporibus, ullam velit voluptatem voluptatibus? Ad consequuntur deleniti iusto maiores optio perferendis quasi ratione repudiandae tempora ullam!</string>
    <string name="btnCalcular">Calcular</string>

    //Pantalla 3
    <string name="btnEnviar">Enviar</string>

    //Pantalla 4
    <string name="lblPaciente">Paciente:</string>
    <string name="lblRiesgoRecurrente">Riesgo recurrente:</string>
    <string name="lblRiesgoProgreso">Riesgo de progreso:</string>
    <string name="lblEsquema">Esquema:</string>
    <string name="radioBtnSi">Si</string>
    <string name="radioBtnNo">No</string>

    //Pantalla 5
    <string name="msgErrorEnvioImg">Error al enviar la imagen</string>

</resources>