<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Pantalla4">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="1dp"
            tools:layout_editor_absoluteY="1dp">

            <TextView
                android:id="@+id/lblPaciente"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lblPaciente" />

            <EditText
                android:id="@+id/editTxtPaciente"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="" />

            <TextView
                android:id="@+id/lblRiesgoRecurrente"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lblRiesgoRecurrente" />

            <EditText
                android:id="@+id/editTxtRiesgoRecurrente"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberDecimal"
                android:text="" />

            <TextView
                android:id="@+id/lblRiesgoProgreso"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lblRiesgoProgreso" />

            <EditText
                android:id="@+id/editTxtRiesgoProgreso"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberDecimal"
                android:text="" />

            <TextView
                android:id="@+id/lblEsquema"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lblEsquema" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center">

                <RadioButton
                    android:id="@+id/radioBtnSi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radioBtnSi" />

                <RadioButton
                    android:id="@+id/radioBtnNo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radioBtnNo" />
            </RadioGroup>

            <Button
                android:id="@+id/btnCalcular2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/btnCalcular"></Button>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>